--- a/assets/app.css
+++ b/assets/app.css
@@ -50,6 +50,7 @@ body{
 	font-family: 'Roboto', sans-serif;
 	color: white;
 	font-weight: 300;
+	font-size: 13em;
 	font-size: 15vmax;
 	text-align: right;
 }
@@ -58,6 +59,7 @@ body{
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    font-size: 13em;
     font-size: 15vmax;
     opacity: 1;
     -webkit-animation: blink .7s infinite;
@@ -157,13 +159,13 @@ body{
 
 .size.ng-hide-add{
 	-webkit-animation: 1s fadeToCenter;
-	animation: 1s fadeToCenter;
+	animation: 1.1s fadeToCenter cubic-bezier(0.55, 0.09, 0.68, 0.53);
 }
 .to-loader.ng-hide-add{
 	position: static;
 	//animation-delay: 0.4s;
 	-webkit-animation: 1.2s fadeToCenter;
-	animation: 1.4s fadeToCenter;
+	animation: 1.0s fadeToCenter cubic-bezier(0.55, 0.09, 0.68, 0.53);
 }
 @keyframes fadeToCenter{
 	from{
@@ -193,8 +195,10 @@ Stuff for the website animation loader
   right: 50%;
   margin: auto;
   display: flex;
+  display: -moz-box;
   justify-content: center;
   align-items: center;
+
 }
 @keyframes appear{
 	from {
@@ -212,14 +216,27 @@ Stuff for the website animation loader
   //border: 2px solid white;
   background-position: 50%;
  // background: white;
+ transition: all .2s ease-in-out;
 }
+.loader--dot a{
+	color: #202020;
+	z-index: -1;
+}
+
+.loader--dot:nth-child(n+1) i:hover{
+	transform: scale(1.05);
+}
+.loader--dot:first-child:hover{
+	transform: scale(2.2);
+}
+
 .loader--dot:first-child {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
   background-size: contain;
   animation-delay: 7s;
-  z-index: 1;
-  //border: 2px solid black;
+  z-index: 4;
+  border: 2px solid black;
   //background: #E5E5E5;
   //box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
   background-position: 50%;
@@ -229,6 +246,7 @@ Stuff for the website animation loader
   animation-property: opacity;
   animation-timing-function: ease-in;
   animation-fill-mode: both;
+  transform: scale(2);
 
 }
 .loader--dot:first-child img {
@@ -243,6 +261,27 @@ Stuff for the website animation loader
   animation-timing-function: ease-in;
   animation-fill-mode: both;
 }
+.loader--dot:first-child span{
+	display: none;
+	transform: scale(0.55);
+	margin-top: 5%;
+	margin-left:16%;
+	-webikit-font-smoothing: antialiased;
+	-blink-font-smoothing: antialiased;
+	font-weight: bold;
+	text-shadow: rgba(0,0,0,.01) 0 0 1px;
+
+}
+.loader--dot:hover span{
+	font-family: 'Roboto', sans-serif;
+	font-weight: Bold;
+	text-align: center;
+	-webikit-font-smoothing: antialiased;
+	-blink-font-smoothing: antialiased;
+	text-shadow: rgba(0,0,0,.01) 0 0 1px;
+	color: white;
+	display: inline-block;
+}
 .loader--dot:nth-child(2) {
   animation-delay: 0.5s;
   z-index: 0;
@@ -254,17 +293,27 @@ Stuff for the website animation loader
   animation-duration: 2s;
   animation-fill-mode: forwards;
 }
-.loader--dot:nth-child(2) i {
+.loader--dot:nth-child(n+1) i {
   verticle-align: middle;
   height: inherit;
   margin: 0 auto;
   font-size: 6.25em;
 }
+.loader--dot:nth-child(n+1) span{
+	display: none;
+}
+.loader--dot:nth-child(n+1):hover span{
+	display: inline-block;
+}
+.loader--dot:nth-child(2):hover span{
+	margin-top: 10%;
+	color: white;
+}
 .loader--dot:nth-child(3) {
   animation-delay: 0.5s;
   z-index: 0;
   text-align: center;
-  display: block;
+  display: inline-block;
   animation-name: loader3;
   animation-timing-function: ease-in;
   animation-duration: 2s;
@@ -276,6 +325,9 @@ Stuff for the website animation loader
   padding-top: 10%;
   margin: 0 auto;
   font-size: 4.5em;
+}
+.loader--dot:nth-child(n+3) span{
+	margin-top: 30%;
 }
 .loader--dot:nth-child(4) {
   animation-delay: 0.5s;
@@ -329,17 +381,20 @@ Stuff for the website animation loader
 }
 @keyframes loaderx{
 	from{
+    border: 1px solid black;
+    background-color: black;
 	}
 	to{
-		border: 2px solid white;
 
-  box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
+  	border: 2px solid white;
+  	box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
   }
 }
 @keyframes loader1 {
   from {
     opacity: 0;
     background: black;
+    border: 1px solid black;
   }
   to {
 	  
@@ -354,9 +409,11 @@ Stuff for the website animation loader
     transform: translateX(0);
     //background: #E5E5E5;
     box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
+    border: 1px solid black;
   }
   to {
 	  background: white;
+    border: 2px solid white;
     transform: translateX(200px);
   }
 }
@@ -365,10 +422,11 @@ Stuff for the website animation loader
     transform: translateX(0);
     //background: #E5E5E5;
     box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
+    border: 1px solid black;
   }
   to {
     background: white;
-    //border: 2px solid white;
+    border: 2px solid white;
     opacity: 1;
     transform: translateX(-200px);
   }
@@ -378,10 +436,12 @@ Stuff for the website animation loader
     transform: translateX(0);
     //background: #E5E5E5;
     box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
+    border: 1px solid black;
   }
   to {
     background: #E5E5E5;
     transform: translateX(-400px);
+    border: 2px solid white;
   }
 }
 @keyframes loader5 {
@@ -389,10 +449,12 @@ Stuff for the website animation loader
     transform: translateX(0);
     //background: #E5E5E5;
     box-shadow: 0 0 1rem rgba(255, 255, 255, 0.15);
+    border: 1px solid black;
   }
   to {
     background: #E5E5E5;
     transform: translateX(400px);
+    border: 2px solid white;
   }
 }
 
