--- a/assets/app.css
+++ b/assets/app.css
@@ -3,13 +3,6 @@ body{
 	width: 100%;
 	background-color: black;
 }
-[ng-cloak].splash{
-	display: block !important;
-	text-align: center;
-}
-.splash{
-	display: none;
-}
 .size{
 	height: 70%;
 }
@@ -28,7 +21,7 @@ body{
 	animation-timing-function: ease-in;
 	animation-fill-mode: forwards;
 	animation-delay: 1.5s;
-	animation-duration: 1.4s;
+	animation-duration: 1.5s;
 }
 @keyframes bounce{
 	0%, 20%, 50%, 80%, 100%{
@@ -161,14 +154,14 @@ body{
  */
 
 .size.ng-hide-add{
-	-webkit-animation: 1s fadeToCenter;
-	animation: 1.1s fadeToCenter cubic-bezier(0.55, 0.09, 0.68, 0.53);
+	-webkit-animation: 1.5s fadeToCenter;
+	animation: 1.5s fadeToCenter cubic-bezier(0.55, 0.09, 0.68, 0.53);
 }
 .to-loader.ng-hide-add{
 	position: static;
-	//animation-delay: 0.4s;
-	-webkit-animation: 1.2s fadeToCenter;
-	animation: 1.0s fadeToCenter cubic-bezier(0.55, 0.09, 0.68, 0.53);
+	animation-delay: 0.4s;
+	-webkit-animation: 1s fadeToCenter;
+	animation: 1s fadeToCenter cubic-bezier(0.55, 0.09, 0.68, 0.53);
 }
 @keyframes fadeToCenter{
 	from{
@@ -178,7 +171,6 @@ body{
 		color: white;
 		opacity: 0;
 		-webkit-transform: translate3d(0, -100%, 0);
-
 		transform: translate3d(0, -100%, 0);
 }
 }
