--- a/assets/app.css
+++ b/assets/app.css
@@ -534,6 +534,7 @@ Stuff for the website animation loader
 }
 /*About Me*/
 .AboutMe{
+	padding-top: 5%;
 	color: white;
 	margin-right: 1em;
 	margin-left:5%;
